# whois42d-ng

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  default.nix  flake.nix  release-plz.toml
.github/: renovate.json
.github/workflows/: nix-flake-check.yml  release-plz.yml  release.yml
nix/: crane.nix  overlay.nix
nix/dev/: checks.nix  flake-module.nix  flake.nix  git-hooks.nix  shell.nix  treefmt.nix
resources/: whois42d-ng-rdap.socket  whois42d-ng.service  whois42d-ng.socket
resources/fixtures/registry-3011/data/aut-num/: AS4242423011
resources/fixtures/registry-3011/data/dns/: moraxyc.dn42
resources/fixtures/registry-3011/data/mntner/: MORAXYC-MNT
resources/fixtures/registry-3011/data/person/: MORAXYC-DN42
resources/fixtures/registry-3011/data/route/: 172.21.86.192_27
resources/fixtures/registry-3011/data/route6/: fdea:a10b:3d3a::_48
resources/fixtures/registry-3011/data/telephony/: +04243011
src/: cidr.rs  lib.rs  main.rs  protocol.rs  registry.rs  response.rs  rpsl.rs  server.rs  signals.rs  socket_activation.rs  types.rs
src/rdap/: bootstrap.rs  http.rs  mapper.rs  mod.rs  model.rs  url.rs
tests/: cidr.rs  cli.rs  protocol.rs  query.rs  rdap.rs  registry.rs  rpsl.rs  server.rs  socket_activation.rs  types.rs
