[package]
name = "whois42d-ng"
version = "1.1.0"
edition = "2024"
exclude = ["/resources/fixtures/**"]

[features]
default = ["systemd"]
systemd = ["dep:systemd"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
env_logger = "0.11"
ipnet = "2.12.0"
log = "0.4"
signal-hook = "0.4"
systemd = { version = "0.10.1", optional = true }
