[package]
name = "whois42d-ng"
version = "2.0.2"
edition = "2024"
exclude = ["/resources/fixtures/**"]

[features]
default = ["systemd"]
systemd = ["dep:systemd"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
env_logger = "0.11"
ipnet = "2.12.0"
log = "0.4"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.4"
systemd = { version = "0.10.1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
